2018-09-18  JJ Allaire  <jj@rstudio.com>

	* src/attributes.cpp: Add support [[Rcpp::init]] attribute
	* vignettes/Rcpp-attributes.Rmd: Documentation for [[Rcpp::init]] attribute

2018-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/r/headers.h: Define STRICT_R_HEADERS, but until
	September 2019 protect by defining RCPP_NO_STRICT_HEADERS

	* .travis.yml (env): Switch to rcpp/ci for ci use

2018-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Move Dockerfile to docker/ci
	* docker/run/Dockerfile: Add deployment Dockerfile
	* docker/plus/Dockerfile: Add 'plus-sized' Dockerfile suitable for
	different add-on packages requiring Rcpp{Armadillo,Eigen,GSL} or BH

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to rcpp/rcpp-testing container

2018-08-29  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Use Dockerfile

2018-08-28  Dirk Eddelbuettel  <edd@debian.org>

	* docker/Dockerfile: Add Dockerfile for use by Travis CI

2018-08-27  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* man/Rcpp-deprecated.Rd: Fix two-char typo/thinko in \link{}

2018-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Refreshed via some edits and updates

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2018-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppLdpath.R (RcppLdPath, RcppLdFlags, CxxFlags, RcppLdFlags)
	(RcppCxx0xFlags): Marked as deprecated

	* man/Rcpp-deprecated.Rd: Add exported functions LdFlags() and
	RcppLdFlags() as deprecated
	* man/RcppLdFlags.Rd: Idem

2018-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* man/loadRcppModules-deprecated.Rd: Fix typo; was deprecated in
	0.12.5, not 0.16.5 which does not exist

2018-07-26  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-FAQ.Rmd: Use collapse: true
	* vignettes/Rcpp-introduction.Rmd: Idem
