@@ -1,3 +1,9 @@
+2018-09-18  Romain Francois  <romain@rstudio.com>
+
+	* inst/include/Rcpp/vector/Matrix.h: Fix Matrix(no_init(int,int)) constructor
+	* inst/unitTests/runit.Matrix.R: test for above
+	* inst/unitTests/cpp/Matrix.cpp: same
+
 2018-09-18  JJ Allaire  <jj@rstudio.com>
 
 	* src/attributes.cpp: Add support [[Rcpp::init]] attribute
